Add signin page, boards components, login

--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,12 @@
   color: #61dafb;
 }
 
+body {
+  background: url('GettyImages-862622434.jpg');
+  background-size: cover;
+}
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
